# gen-ai-starter-template

./: .env.example  LICENSE  README.md  pyproject.toml
src/: main.py
src/config/: settings.py
src/examples/: verify_setup.py
src/llm/: base.py  client.py  config.py
src/schemas/: chat.py
tests/: conftest.py
tests/unit/: test_llm_client.py  test_llm_config.py  test_main.py  test_placeholder.py  test_schemas.py  test_settings.py
